# wolf-gallery

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_blade.xml  ic_launcher_copper.xml  ic_launcher_cosmic.xml  ic_launcher_ember.xml  ic_launcher_floral_round.xml  ic_launcher_lavender_round.xml  ic_launcher_lunar.xml  ic_launcher_nebula_round.xml  ic_launcher_shield_round.xml  ic_launcher_steel_round.xml
app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
core-crypto/: build.gradle.kts
core-logging/: build.gradle.kts
core-native/: build.gradle.kts  consumer-rules.pro
core-native/src/main/cpp/: CMakeLists.txt  native-lib.cpp
core-storage/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt  3.txt
feature-gallery/: build.gradle.kts
feature-gallery/src/main/res/drawable/: ic_album_outline.xml  ic_group_outline.xml  ic_pin.xml
feature-gallery/src/main/res/values/: strings.xml
feature-gallery/src/main/res/values-ar/: strings.xml
feature-gallery/src/main/res/values-es/: strings.xml
feature-gallery/src/main/res/values-ru/: strings.xml
feature-settings/: build.gradle.kts
feature-settings/src/main/res/drawable/: ic_medieval_add.xml  ic_medieval_album.xml  ic_medieval_arrow_back.xml  ic_medieval_arrow_down.xml  ic_medieval_arrow_right.xml  ic_medieval_check.xml  ic_medieval_close.xml  ic_medieval_edit.xml  ic_medieval_folder.xml  ic_medieval_info.xml  ic_medieval_list.xml  ic_medieval_lock.xml  ic_medieval_menu.xml  ic_medieval_more.xml  ic_medieval_refresh.xml  ic_medieval_search.xml  ic_medieval_select_all.xml  ic_medieval_send.xml  ic_medieval_settings.xml  ic_medieval_share.xml  ic_medieval_sort.xml  ic_medieval_trash.xml
feature-settings/src/main/res/values/: strings.xml
feature-settings/src/main/res/values-ar/: strings.xml
feature-settings/src/main/res/values-es/: strings.xml
feature-settings/src/main/res/values-ru/: strings.xml
feature-wizard/: build.gradle.kts
feature-wizard/src/main/res/values-ar/: strings.xml
gradle/: libs.versions.toml
(+100 files in other folders)
